<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/myLinearLayout"
    tools:context=".BMICalculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/enter_your_weight_kgs"
        android:textColor="#000"/>
    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:inputType="numberDecimal"
        android:hint="@string/enter_your_weight_in_kgs"
        android:background="@drawable/edit_bg"
        android:autofillHints="Weight" />
    <TextView
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/enter_your_height_cm"
        android:textColor="#000"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:hint="@string/enter_your_height_in_centimetre_cm"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_bg"
        android:autofillHints="Height" />
    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/calculate"
        android:background="@drawable/button_bg"
        android:textColor="#fafafa"/>
    <TextView
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/your_result"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:layout_marginVertical="15dp"/>
    <TextView
        android:id="@+id/res"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"/>
</LinearLayout>